2002-12-30  Till Kamppeter <till.kamppeter@gmx.net>

	* db/source/opt/*.xml: Put rest of the options into groups.

	* db/source/opt/ppmtomd-Colours.xml,
	  db/source/opt/ppmtomd-PrintColors.xml: Renamed "Colours" option
	  of "ppmtomd" to "PrintColors", to be consistent with the drivers
	  "bjc600" and "bjc250gs".
	
2002-12-19  Till Kamppeter <till.kamppeter@gmx.net>

	* README, USAGE: Updated for Foomatic 2.9.1 (Composite options).

2002-12-18  Till Kamppeter <till.kamppeter@gmx.net>

	* db/source/opt/*.xml: Put most options into groups. Options
	  which should either be in the "General" group or will
	  be member of "PrintoutMode" get a tag for the "General"
	  group (so that they appear in "General" as long as
	  a "PrintoutMode" option is not available yet, when one is
	  available, they go automatically into the "PrintoutMode"
	  group). Numerical options go to "Adjustment", "Model" and
	  options for which it is not worth to start a new group,
	  go into "Miscellaneous".

	* db/source/opt/largeformat-PageSize.xml: Custom page size
	  for large format printers.

	* db/source/printer/Epson-Stylus_CX?200.xml: Added instructions
	  to tweak the "scanner.o" kernel module to make the Epson
	  Stylus CX3200/CX5200 scanning.

2002-12-17  Till Kamppeter <till.kamppeter@gmx.net>

	* db/source/opt/drv_z42-*.xml: Introduced composite option
	  "PrintoutMode" for the "drv_z42" driver, Put the "PageSize",
	  "InkType", and "PrintoutMode" into the "General" group, the
	  other options into a group named "PrintoutMode".

	* db/source/opt/2.xml, db/source/opt/159.xml,
	  db/source/opt/160.xml, db/source/opt/PCL-XL-InputSlot.xml,
	  db/source/opt/pxlmono-PrintoutMode.xml: Introduced composite
	  option for the "pxlmono" driver. Put the "PageSize" (2.xml),
	  "InputSlot", and "PrintoutMode" into the "General" group, the
	  rest into the "PrintoutMode" group.

	* db/source/opt/86.xml, db/source/opt/87.xml,
	  db/source/opt/88.xml, db/source/opt/89.xml,