@@ -84,5 +84,47 @@
   <printer>
    <id>printer/102304</id><!-- HP PSC 500 -->
   </printer>
+  <printer>
+   <id>printer/77952</id><!-- HP OfficeJet 500 -->
+  </printer>
+  <printer>
+   <id>printer/HP-OfficeJet_520</id>
+  </printer>
+  <printer>
+   <id>printer/HP-OfficeJet_570</id>
+  </printer>
+  <printer>
+   <id>printer/HP-OfficeJet_580</id>
+  </printer>
+  <printer>
+   <id>printer/HP-OfficeJet_590</id>
+  </printer>
+  <printer>
+   <id>printer/185033</id><!-- HP OfficeJet 600 -->
+  </printer>
+  <printer>
+   <id>printer/HP-OfficeJet_6100</id>
+  </printer>
+  <printer>
+   <id>printer/74208</id><!-- HP OfficeJet 625 -->
+  </printer>
+  <printer>
+   <id>printer/HP-OfficeJet_630</id>
+  </printer>
+  <printer>
+   <id>printer/100704</id><!-- HP OfficeJet 635 -->
+  </printer>
+  <printer>
+   <id>printer/HP-OfficeJet_700</id>
+  </printer>
+  <printer>
+   <id>printer/142944</id><!-- HP OfficeJet 710 -->
+  </printer>
+  <printer>
+   <id>printer/HP-OfficeJet_720</id>
+  </printer>
+  <printer>
+   <id>printer/HP-OfficeJet_725</id>
+  </printer>
  </printers>
 </driver>
