@@ -16,7 +16,7 @@
       </comments>
     <!--one or more "partno" elements.--></consumables>
   </mechanism>
-  <url>http://www.hp.com/all-in-one/products/600.html</url>
+  <url>http://www.hp.com/cposupport/nonjsnav/hpofficeje24362.html</url>
   <lang>
     <pcl level="3"/><!--no pjl-->
     <text>
