@@ -13,7 +13,7 @@
     <consumables>
     <!--no comments--><!--one or more "partno" elements.--></consumables>
   </mechanism>
-  <url>http://www.all-in-one-home.com/products/600.html</url>
+  <url>http://www.hp.com/cposupport/nonjsnav/hpofficeje24362.html</url>
   <lang>
     <pcl level="3"/><!--no pjl-->
     <text>
