@@ -10,6 +10,19 @@
         <y>1200</y>
       </dpi>
     </resolution>
+    <margins>
+      <general>
+        <unit>pt</unit>
+	<left>18</left>
+	<right>18</right>
+	<top>6</top>
+	<bottom>36</bottom>
+      </general>
+      <exception PageSize="A4">
+	<left>10</left>
+	<right>10</right>
+      </exception>
+    </margins>
     <consumables>
       <comments>
         <en>Color(CMY), Black</en>
