@@ -1,6 +1,6 @@
-<printer id="printer/77952">
+<printer id="printer/HP-OfficeJet_570.xml">
   <make>HP</make>
-  <model>OfficeJet 500</model>
+  <model>OfficeJet 570</model>
   <mechanism>
     <inkjet/>
     <color/>
