@@ -1,6 +1,6 @@
-<printer id="printer/100704">
+<printer id="printer/HP-OfficeJet_610">
   <make>HP</make>
-  <model>OfficeJet 635</model>
+  <model>OfficeJet 610</model>
   <mechanism>
     <inkjet/>
     <color/>
@@ -15,8 +15,11 @@
   </mechanism>
   <url>http://www.hp.com/cposupport/nonjsnav/hpofficeje24362.html</url>
   <lang>
-    <pcl level="3"/>
-  <!--no pjl--><!--No "text"?--></lang>
+    <pcl level="3"/><!--no pjl-->
+    <text>
+      <charset>us-ascii</charset>
+    </text>
+  </lang>
   <autodetect>
   <!--no known parport probe information--></autodetect>
   <functionality>B</functionality>
@@ -24,14 +27,13 @@
   <!--no "contrib_url"-->
   <comments>
     <en>
-
     Multifunction device: printer/scanner/copier/fax.&lt;p&gt;
 
     To get its maximum quality, use the &quot;hpijs&quot; driver. 600
     dpi in colour is not supported by the hardware.&lt;p&gt;
 
     Head alignment/cleaning impossible with usual free software and
-    also not from the front panel.&lt;p&gt;
+    also not possible from the front panel.&lt;p&gt;
 
     Scanning works using the &lt;a
     href=&quot;http://hpoj.sourceforge.net/&quot;&gt;HPOJ&lt;/a&gt;
