@@ -1,0 +1,73 @@
+<printer id="printer/HP-OfficeJet_6110">
+  <make>HP</make>
+  <model>OfficeJet 6110</model>
+  <mechanism>
+    <inkjet/>
+    <color/>
+    <resolution>
+      <dpi>
+        <x>4800</x>
+        <y>1200</y>
+      </dpi>
+    </resolution>
+    <consumables>
+      <comments>
+        <en>One Color(CMY) + one Black(K) or Photo (cmK)</en>
+      </comments>
+    <!--one or more "partno" elements.--></consumables>
+  </mechanism>
+  <url>http://products.hp-at-home.com/products/detail.php?high_level_category_id=2&amp;category_id=4&amp;sub_category_id=1a0b63b1a36ae92185a5525f39c61de0&amp;prodnum=Q1638A</url>
+  <lang>
+    <pcl level="3"/><!--no pjl-->
+    <text>
+      <charset>us-ascii</charset>
+    </text>
+  </lang>
+  <autodetect>
+  </autodetect>
+  <functionality>B</functionality>
+  <driver>hpijs</driver>
+  <!--no "contrib_url"-->
+  <comments>
+    <en>
+
+    Multi-function device: Printing, scanning, copying, fax. The
+    integrated flatbed scanner has an automatic document feeder and is
+    A4/Letter-sized.&lt;p&gt;
+
+    The best printout quality you will get with the &quot;hpijs&quot;
+    driver, provided by &lt;a
+    href=&quot;http://hpinkjet.sourceforge.net/&quot;&gt;HP&lt;/a&gt;
+    (compatible to the HP DeskJet 990C), especially the 1200-dpi high
+    resolution mode gives excellent photo quality (the rendered bitmap
+    is 1200x1200 dpi, but the printer hardware does an interpolation
+    then and prints with the printer&apos;s highest resolution). Also
+    the GIMP-Print driver is reported to work (Model setting:
+    &quot;pcl-900&quot;).&lt;p&gt;
+
+    When used with HP&apos;s &quot;hpijs&quot; driver, this printer
+    auto-detects the paper type and ink cartridge type and does
+    appropriate dithering and colour adjustment internally, controlled
+    by the hardware. So when GhostScript with the &quot;hpijs&quot;
+    driver only renders the image with 300 or 600 dpi, higher
+    resolutions are used for the internal dithering. So if you insert
+    photo paper, the printer will print in photo quality, no paper
+    type choice in the driver&apos;s options is needed. There is also
+    a special high resolution mode where the image is rendered in 1200
+    dpi and interpolated to 4800x1200 dpi by the hardware, without
+    paper detection, intended for photo paper only.&lt;p&gt;
+
+    Full-Bleed printing is supported with &quot;hpijs&quot;.&lt;p&gt;
+
+    Scanning works using the &lt;a
+    href=&quot;http://hpoj.sourceforge.net/&quot;&gt;HPOJ&lt;/a&gt;
+    low-level driver together with its &lt;a
+    href=&quot;http://panda.mostang.com/sane/&quot;&gt;SANE&lt;/a&gt;
+    backend &quot;hpoj&quot;.&lt;p&gt;
+
+    PC-assisted faxing is not supported yet.&lt;p&gt;
+
+    </en>
+  </comments>
+</printer>
+
