@@ -1,6 +1,6 @@
-<printer id="printer/142944">
+<printer id="printer/HP-OfficeJet_720">
   <make>HP</make>
-  <model>OfficeJet 710</model>
+  <model>OfficeJet 720</model>
   <mechanism>
     <inkjet/>
     <color/>
