@@ -32,10 +32,10 @@
     <en>
 
     As the HP OfficeJet D135, but with extra 250-sheets tray (400
-    sheets total, tray selection not supported by &quot;hpijs&quot;
-    driver yet, but under development), a duplex unit (works with
-    &quot;hpijs&quot;, &quot;cdj970&quot;, and &quot;pcl3&quot;
-    drivers), photo card reader (accessible with &lt;a
+    sheets total, tray selection supported by &quot;hpijs&quot;
+    driver), a duplex unit (works with &quot;hpijs&quot;,
+    &quot;cdj970&quot;, and &quot;pcl3&quot; drivers), photo card
+    reader (accessible with &lt;a
     href=&quot;http://hpoj.sourceforge.net/&quot;&gt;HPOJ&lt;/a&gt;),
     and network adapter.&lt;p&gt;
 
