@@ -1,3 +1,14 @@
+2003-01-15  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* db/source/printer/*.xml: Added the HP OfficeJet 520, 570, 580,
+	  590, 610, 630, 700, 720, 725. 6110.
+
+	* db/source/printer/*.xml: Text/URL updates for the HP OfficeJet
+	  500, 600, 625, 635, 710, D155.
+
+	* db/source/driver/cdj670.xml: Added HP OfficeJet 500, 600, and
+	  700 series to the list of supported printers.
+
 2002-12-30  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* db/source/opt/*.xml: Put rest of the options into groups.
